--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -9,7 +9,6 @@
     justify-content: center;
     align-items: center;
     transition: all 0.3s ease;
-    position: relative;
     overflow: hidden;
 }
 
@@ -77,6 +76,10 @@
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.btn-style.icon {
+    position: relative;
 }
 
 .btn-style.icon a {
