--- a/src/styles/custome.css
+++ b/src/styles/custome.css
@@ -29,7 +29,7 @@
 }
 
 .label-upload {
-    width: 50%;
+    width: 100%;
     display: block;
     padding: 12px;
     border-radius: 8px;
@@ -64,4 +64,19 @@
     margin-left: 12px;
     max-width: 100%;
     overflow: hidden;
+}
+
+.skeleton {
+    background-color: #e2e5e7;
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.0));
+    background-size: 40px 100%;
+    background-repeat: no-repeat;
+    background-position: left -40px top 0;
+    animation: shine 1s ease infinite;
+}
+
+@keyframes shine {
+    to {
+        background-position: right -40px top 0;
+    }
 }
