--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -20,14 +20,6 @@
     border: 1px solid var(--purple);
 }
 
-.btn-style.btn-outline {
-    padding: 8px 24px;
-    color: var(--text-primary);
-    background-color: transparent;
-    border-radius: 200px;
-    border: 1px solid var(--light-gray);
-}
-
 .btn-style.btn-rounded {
     min-width: 40px;
     min-height: 40px;
@@ -92,4 +84,14 @@
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.btn-style.btn-outline {
+    color: var(--text-primary);
+    background-color: transparent;
+    border: 1px solid var(--text-primary);
+}
+
+.btn-style.btn-outline:hover {
+    background-color: transparent;
 }
