--- a/src/styles/custome.css
+++ b/src/styles/custome.css
@@ -67,8 +67,8 @@
 }
 
 .skeleton {
-    background-color: #e2e5e7;
-    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.0));
+    background-color: var(--loading-background);
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.0), var(--loading), rgba(255, 255, 255, 0.0));
     background-size: 40px 100%;
     background-repeat: no-repeat;
     background-position: left -40px top 0;
