--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,4 +6,6 @@
     align-items: center;
     background-color: var(--brown);
     transition: all 0.3s ease;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
 }
