--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,16 +6,22 @@
     display: flex;
     position: relative;
     user-select: none;
+    color: var(--text-primary);
+    background-color: var(--body-background);
 }
 
 .content-wrapper {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: var(--background);
+    background-color: var(--brown);
+    background-image: var(--linear-bg);
     overflow-y: scroll;
     padding-bottom: 150px;
     transition: all 0.3s ease;
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+    border-top-right-radius: 16px;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
