--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,13 @@
   --loading: rgba(255, 255, 255, 0.2);
   --body-background: #090909;
   --linear-bg: linear-gradient(45deg, #090909, #242424, #121212);
-  --gray: #171717;
+  --gray: transparent;
   --player: radial-gradient(circle at -8.9% 51.2%, rgb(255, 124, 0) 0%, rgb(255, 124, 0) 15.9%, rgb(255, 163, 77) 15.9%, rgb(255, 163, 77) 24.4%, #242424 24.5%, #121212 66%);
 }
 
+
 [data-theme="light"] {
-  --brown: #eee;
+  --brown: #fff;
   --background: #fff;
   --purple: #27ae60;
   --light-brown: #242424;
@@ -35,7 +36,7 @@
   --loading-background: #e2e5e7;
   --loading: rgba(255, 255, 255, 0.5);
   --body-background: #ccc;
-  --linear-bg: linear-gradient(45deg, #ccc, #eee, #fff);
+  --linear-bg: linear-gradient(45deg, #fff, #fff, #fff);
   --gray: #fff;
   --player: radial-gradient(circle at -8.9% 51.2%, #27ae60 0%, #27ae60 15.9%, #51c581 15.9%, #82e0a9 24.4%, #fff 24.5%, #eee 66%);
 
