--- a/src/styles/music.css
+++ b/src/styles/music.css
@@ -30,6 +30,7 @@
 }
 
 .music:hover .more-action {
+    opacity: 1;
     display: flex;
     align-items: center;
     justify-content: space-around;
