--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,14 +28,14 @@
   --background: #fff;
   --purple: #27ae60;
   --light-brown: #242424;
-  --light-gray: #ccc;
+  --light-gray: #e9e9e9;
   --text-secondary: #4b4747;
   --text-primary: #090909;
   --background-dark: #eee;
   --brown-rgba: #46454733;
   --loading-background: #e2e5e7;
   --loading: rgba(255, 255, 255, 0.5);
-  --body-background: #ccc;
+  --body-background: #e9e9e9;
   --linear-bg: linear-gradient(45deg, #fff, #fff, #fff);
   --gray: #fff;
   --player: radial-gradient(circle at -8.9% 51.2%, #27ae60 0%, #27ae60 15.9%, #51c581 15.9%, #82e0a9 24.4%, #fff 24.5%, #eee 66%);
