--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,4 +8,5 @@
     transition: all 0.3s ease;
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
+    overflow: hidden;
 }
